--- a/home.html
+++ b/home.html
@@ -1,1 +1,56 @@
-<h1>Hello world</h1>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Crypto</title>
+    <link rel="stylesheet" href="style.css">
+    <script src="http://code.jquery.com/jquery-3.1.0.min.js"></script>
+    <script type="text/javascript" src="app.js"></script>
+</head>
+
+<body>
+
+    <select id='symbol'>
+        <option value=”BTC”>BTC</option>
+        <option value=”ETH”>ETH</option>
+        <option value=”BNB”>BNB</option>
+        <option value=”ADA”>ADA</option>
+        <option value=”XRP”>XRP</option>
+        <option value=”DOGE”>DOGE</option>
+        <option value=”DOT”>DOT</option>
+        <option value=”UNI”>UNI</option>
+        <option value=”BCH”>BCH</option>
+        <option value=”LTC”>LTC</option>
+        <option value=”SOL”>SOL</option>
+        <option value=”LINK”>LINK</option>
+        <option value=”WBTC”>WBTC</option>
+        <option value=”XLM”>XLM</option>
+        <option value=”MATIC”>MATIC</option>
+        <option value=”ETC”>ETC</option>
+        <option value=”THETA”>THETA</option>
+        <option value=”ICP”>ICP</option>
+        <option value=”VET”>VET</option>
+        <option value=”FIL”>FIL</option>
+        <option value=”TRX”>TRX</option>
+        <option value=”AAVE”>AAVE</option>
+        <option value=”XMR”>XMR</option>
+        <option value=”EOS”>EOS</option>
+        <option value=”ALGO”>ALGO</option>
+    </select>
+
+    <select id='interval'>
+        <option value=”24-HOUR”>24 Hours</option>
+        <option value=”1-MONTH”>One Month</option>
+        <option value=”6-MONTH”>Six Months</option>
+    </select>
+
+    <button id='predictPrice'>Predict Price!</button>
+
+    <h1 id='showPredictedPrice'></h1>
+
+</body>
+
+</html>
