--- a/stock.html
+++ b/stock.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="http://code.jquery.com/jquery-3.1.0.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.1.0.min.js"></script>
     <script type="text/javascript" src="js/app.js"></script>
     <!-- Bootstrap -->
     <link href="js/bootstrap-3.3.7-dist/css/bootstrap.min.css" rel="stylesheet">
